--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
-    <div id="app">ddddd</div>
+    <div id="app">test</div>
 </body>
 </html>
